--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
   --accent-color-light-brown-80: rgb(201, 155, 103, 0.8);
   --accent-color-light-brown-60: rgb(201, 155, 103, 0.6);
   --light-brown: #f3d7b7;
+  --light-bg: #f8f8f2;
   --outline-color: var(--accent-color-green);
 }
 
@@ -106,6 +107,8 @@ img{
 
 .mian-content{
   flex-grow: 1;
+  padding-top: 20px;
+  padding-bottom: 50px;
 }
 
 
@@ -187,8 +190,6 @@ img{
 
 /* HERO */
 
-.hero {
-}
 .hero-container {
   display: flex;
   padding-left: 0;
@@ -219,12 +220,6 @@ img{
   line-height: 1.5;
 }
 
-.button {
-}
-
-.button-green {
-}
-
 .hero-img {
   width: 710px;
   height: 596px;
@@ -234,6 +229,73 @@ img{
 .hero-img-index{
   height: 696px;
 }
+
+
+/* INDEX-COLLECTION */
+
+.index-collection-inner {
+  padding: 50px 143px;
+  background-color: var(--light-bg);
+  background-image: url(../img/index-collection-bg.jpg);
+}
+
+.index-collection-heading {
+  margin-top: 0;
+  margin-bottom: 80px;
+  font-size: 50px;
+  line-height: normal;
+  text-align: center;
+  text-transform: uppercase;
+  color: #000;
+}
+
+.index-collection-list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.index-collection-item {
+  display: flex;
+  align-items: center;
+}
+
+.index-collection-item:nth-child(even){
+  flex-direction: row-reverse;
+}
+
+.index-collection-img {
+  flex-shrink: 0;
+  width: 450px;;
+  height: 375px;
+  object-fit: cover;
+}
+
+.index-collection-info {
+  flex-grow: 1;
+  padding-left: 117px;
+  padding-right: 117px;
+}
+
+.index-collection-title {
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-size: 48px;
+  line-height: normal;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.index-collection-text {
+  margin: 0;
+  font-size: 22px;
+  line-height: 34;
+}
+
+.index-collection-text:not(:last-child){
+  margin-bottom: 10px;
+}
+
 
 
 /* RETINA-BG */
@@ -250,4 +312,7 @@ only screen and (                min-resolution: 2dppx) {
     background-image: url(../img/site-header-intro-bg@2x.jpg);
   }
 
+  .index-collection-inner {
+    background-image: url(../img/index-collection-bg@2x.jpg);
+  }
 }
