--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,6 @@ body{
   line-height: 1.75;
   background-color: #fff;
   color: var(--text-color);
-  white-space: nowrap;
 }
 
 img{
@@ -47,6 +46,14 @@ img{
 *:focus{
   outline: 2px dashed var(--outline-color);
   outline-offset: 3px;
+}
+
+/* MAIN-CONTENT */
+
+.mian-content{
+  flex-grow: 1;
+  padding-top: 20px;
+  padding-bottom: 50px;
 }
 
 
@@ -103,13 +110,7 @@ img{
   background-color: var(--accent-color-light-brown-60);
  }
 
-/* MAIN-CONTENT */
 
-.mian-content{
-  flex-grow: 1;
-  padding-top: 20px;
-  padding-bottom: 50px;
-}
 
 
 /* SITE-HEADER-INTRO-WRAPPER */
@@ -233,10 +234,14 @@ img{
 
 /* INDEX-COLLECTION */
 
+.index-collection{
+  margin-bottom: 20px;
+}
+
 .index-collection-inner {
   padding: 50px 143px;
   background-color: var(--light-bg);
-  background-image: url(../img/index-collection-bg.jpg);
+  background-image: url("../img/index-collection-bg.jpg");
 }
 
 .index-collection-heading {
@@ -297,6 +302,77 @@ img{
 }
 
 
+/* INDEX-FEATURES*/
+
+.index-features{
+  margin-bottom: 30px;
+}
+
+.index-features-inner {
+  padding: 50px 30px;
+  background-image: url(../img/index-features-bg.jpg);
+  background-size: 100% 700px;
+  background-repeat: no-repeat;
+}
+
+.index-features-heading {
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-size: 50px;
+  line-height: normal;
+  color:#fff;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.index-features-lead {
+  max-width: 580px;
+  margin-top: 0;
+  margin-bottom: 80px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  color: #fff;
+}
+
+.index-features-list {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+  margin-left: -20px;
+  list-style: none;
+}
+
+.index-features-item {
+  width: calc( 100% / 3 -20px);
+  margin-left: 20px;
+  margin-bottom: 30px;
+}
+
+.index-features-img {
+  width: 433px;
+  height: 500px;
+  margin-bottom: 28px;
+  object-fit: cover;
+}
+
+.index-features-item-heading {
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-size: 30px;
+  line-height: normal;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.index-features-item-text {
+  margin: 0;
+  font-size: 18px;
+  line-height: 28px;
+}
+
+
 
 /* RETINA-BG */
 
@@ -314,5 +390,9 @@ only screen and (                min-resolution: 2dppx) {
 
   .index-collection-inner {
     background-image: url(../img/index-collection-bg@2x.jpg);
+  }
+
+  .index-features-inner {
+    background-image: url(../img/index-features-bg@2x.jpg);
   }
 }
