--- a/css/styles.css
+++ b/css/styles.css
@@ -294,7 +294,7 @@ img{
 .index-collection-text {
   margin: 0;
   font-size: 22px;
-  line-height: 34;
+  line-height: 34px;
 }
 
 .index-collection-text:not(:last-child){
@@ -337,10 +337,10 @@ img{
 
 .index-features-list {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   padding: 0;
   margin: 0;
-  margin-left: -20px;
+  margin-left: 20px;
   list-style: none;
 }
 
