--- a/css/styles.css
+++ b/css/styles.css
@@ -180,6 +180,11 @@ img{
   color: var(--text-color);
 }
 
+.sitenav-medium-font .sitenav-link{
+  font-size: 16px;
+  line-height: normal;
+}
+
 .sitenav-link:hover{
   color: var(--accent-color-green);
 }
@@ -375,6 +380,10 @@ img{
 
 /* HOW-IT-WORKS */
 
+.how-it-works{
+  margin-bottom: 50px;
+}
+
 .how-it-works-inner {
   padding: 50px 30px;
   background-color: var(--accent-color-green);
@@ -457,6 +466,68 @@ img{
 }
 
 
+/* SITE-FOOTER */
+
+.site-footer {
+  padding-top: 65px;
+  padding-bottom: 65px;
+  background-color: var(--light-brown);
+  background-image: url(../img/site-header-intro-bg.jpg);
+}
+
+.site-footer-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.site-footer-logo-link {
+  display: flex;
+}
+
+.site-footer-logo-link:hover{
+  opacity: 0.8;
+}
+
+.site-footer-logo-link:active{
+  opacity: 0.6;
+}
+
+.site-header-logo-img {
+  flex-shrink: 0;
+  width: 235px;
+  height: 24px;
+  object-fit: contain;
+}
+
+
+/* SOCIALS */
+
+.socials {
+  display: flex;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.socials-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.socials-link {
+  display: flex;
+  color: #000;
+}
+
+.socials-link:hover{
+  color:var(--accent-color-green);
+}
+
+.socials-link:active{
+  opacity: 0.6;
+}
+
 
 /* RETINA-BG */
 
@@ -468,7 +539,7 @@ only screen and (        min-device-pixel-ratio: 2),
 only screen and (                min-resolution: 192dpi),
 only screen and (                min-resolution: 2dppx) {
 
-  .site-header-hero-wrapper{
+  .site-header-hero-wrapper, .site-footer{
     background-image: url(../img/site-header-intro-bg@2x.jpg);
   }
 
