--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@ body{
   height: 100%;
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
   font-family: "Roboto", "Arial", sans-serif;
   font-size: 16px;
   line-height: 1.75;
@@ -226,7 +227,19 @@ img{
   line-height: 1.5;
 }
 
+.hero-img-wrapper{
+  position: relative;
+}
+
+.hero-badge{
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: translate(-50%, -50%);
+}
+
 .hero-img {
+  display: block;
   width: 710px;
   height: 596px;
   object-fit: cover;
@@ -244,6 +257,7 @@ img{
 }
 
 .index-collection-inner {
+  position: relative;
   padding: 50px 143px;
   background-color: var(--light-bg);
   background-image: url("../img/index-collection-bg.jpg");
@@ -304,6 +318,24 @@ img{
 
 .index-collection-text:not(:last-child){
   margin-bottom: 10px;
+}
+
+.index-collection-leaves-left{
+  position: absolute;
+  left: -150px;
+  top: 40px;
+}
+
+.index-collection-leaves-mix{
+  position: absolute;
+  right: -350px;
+  top: 685px;
+}
+
+.index-collection-leaves-light{
+  position: absolute;
+  left: -216px;
+  bottom: 170px;
 }
 
 
@@ -413,6 +445,7 @@ img{
 }
 
 .how-it-works-item {
+  position: relative;
   display: flex;
   flex-direction: column;
   width: calc(100% / 3 -20px);
@@ -421,11 +454,25 @@ img{
 }
 
 .how-it-works-item::before{
+  position: relative;
+  z-index: 2;
   width: 60px;
   height: 60px;
   border: 4px solid var(--accent-color-light-brown);
   margin-bottom: 20px;
   background-color: var(--light-bg);
+  text-align: right;
+  content: "";
+}
+
+.how-it-works-item:not(:last-child):after{
+  position: absolute;
+  left: 35px;
+  top: 30px;
+  width: 433px;
+  height: 3px;
+  background-image: url("../img/brown-dashed-stroke.svg");
+  background-repeat: no-repeat;
   content: "";
 }
 
